@@ -1862,9 +1862,19 @@ wait for text box # wait until the player continues</example>
 			<note>If the player uses a spell which kills all the heroes in the party (outside of battles a hero isn't counted as dead if their maximum HP is zero or negative), a normal game over occurs: the game over script is run if there is one, otherwise the game ends. However the game over won't happen until the next wait command (such as <ref>wait</ref>).</note></description>
 		</command>
 		<command id="equipmenu">
-			<canon>equip menu (who)</canon>
+			<canon>equip menu (who, allow switching)</canon>
 			<shortname>equip menu</shortname>
-			<description>Takes you directly to a hero&apos;s equip menu. Specify the hero using its position in the party 0-3. Use <ref>findhero</ref> if you want to specify the hero by name. The <ref>pickhero</ref> command can also be useful. If you do not specify any hero, the first hero in the party will be used.</description>
+			<description>
+				Takes you directly to a hero's equip menu.
+				Specify the hero using its position in the party 0-3.
+				Use <ref>findhero</ref> if you want to specify the hero by name.
+				The <ref>pickhero</ref> command can also be useful.
+				If you do not specify any hero, the first hero in the party will be used.
+				The optional second argument <p>allow switching</p> says whether
+				to allow the player to switch to a different hero by pressing
+				Left and Right keys.
+				It defaults to <tt>true</tt>.
+			</description>
 		</command>
 		<command id="savemenu">
 			<canon>save menu (reallysave)</canon>
