@@ -131,6 +131,7 @@ WHAT IS NEW?
         variables in the parent script, "shadowing" them [Ralph]
       * Hexidecimal, octal and binary number constants, written like
         0xCABBA9E, 0o377 and 0b1101111000011 [Ralph]
+    * Added "allow switching" argument to "equip menu" command [Ralph]
 
   * Changes
     * Sound effects used to play at max volume, which has now changed
